@@ -1,3 +1,7 @@
+2012-03-29  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.3.0 Released.
+
 2012-03-26  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.3.0-rc3 Released.
